k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host:
      http:
        paths:
          - backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
          - backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 8080
            path: /api
            pathType: Prefix
